syntax = "proto3";

message _MarketCollectionTag {
  optional string localizationKey = 1;
  optional string title = 2;
}
